--- a/Portfólio.html
+++ b/Portfólio.html
@@ -9,47 +9,103 @@
     <body>
         <section>
         <h1>Contextualização</h1>
-    <img src="" alt="">
-    <p></p>
-    <p></p>
-    <p></p>
+    <img src="c:\Users\Lucas\Desktop\AAAA.png" alt="Lucas Henrique D'amico">
+    <p>
+        Olá!
+     <br>   
+        Seja muito bem-vindo ao meu espaço.
+     <br>
+        Aqui você terá acesso ao presente portfólio, o qual conta um pouco de minha trajetória, tanto no estudo e profissional quanto das minha paixões.
+        Sou paralegal na área de Direito Trabalhista, onde atuo com responsabilidade e atenção aos detalhes que fazem diferença nos processos e na vida das pessoas. Ao mesmo tempo, também caminho por outras estradas que me completam: escrevo histórias, estudo cinema e cultivo um carinho especial pelo universo dos cafés.
+        Acredito que nossa identidade profissional não precisa ser limitada à uma única área.
+     <br>   
+        Na verdade, ela deve crescer e refletir nossa personalidade ao mundo ao nosso redor, o qual segue com sua sufocante filosofia de criar apenas cópias das cópias que o mundo do capital diz ser a cara do sucesso.
+     <br>   
+        Neste portfólio, você irá irá ter contato com meu mais sincero eu: mosaico sincero das experiências que carrego e das que ainda quero construir.
+     <br>   
+        Sinta-se à vontade para explorar. Será um prazer dividir um pouco de mim com você.
+    </p>
+        <section>
+            <H1>ÍNDICE</H1>
+        </section>
+    <nav id="menu">
+        <ul>
+          <li><a href="#1 - Direito">Direito Trabalhista;</a></li>
+          <li><a href="#2 - Escritor">Escritor Independente;</a></li>
+          <li><a href="#3 - Cinema">Estudos de Cinema;</a></li>
+          <li><a href="#4 - Café">Cafés Especiais;</a></li>
+        </ul>
+      </nav>
+      <section>
+        <h2>Atuação em Direito Trabalhista</h2>
+        <img src="c:\Users\Lucas\Downloads\Juiz.png" alt="Paralegal">
+        <p>
+          Atuei como paralegal na área trabalhista, redigindo peças processuais, realizando pesquisas jurisprudenciais e dando suporte técnico em audiências e diligências, bem como auxílio nas dúvidas de vários clientes que enviavam mensagem via Whatsapp para o escritório.
+         <br> 
+          Meu trabalho visava garantir a qualidade e agilidade nas rotinas jurídicas do escritório e o melhor e mais confortável atendimento ao cliente.
+        </p>
+      </section>
+      <h2>Escritor Independente</h2>
+      <img src="c:\Users\Lucas\Desktop\Escritor.jpg" alt="Escritor Independente">
+    <p>
+      Desde que eu era pequeno, minha brincadeira favorita era escrever ou criar histórias. 
+     <br>
+      De forma independente, produzi quadrinhos, contos e roteiros autorais, explorando temas como fantasia,
+      mistério, cinema e crítica social — infelizmente, ainda não obtive a tão sonhada oportunidade de me lançar nesse mundo. 
+     <br> 
+      A escrita é minha forma de expressão criativa e de
+      conexão com o mundo ao meu redor.
+    </p>
+  </section>
+    <h2>Estudos de Cinema</h2>
+    <img src="c:\Users\Lucas\Downloads\maxresdefault.jpg" alt="A Arte Contar Histórias Com Uma Câmera">
+    <p>
+    De forma conexa com o gosto pela escrita e a arte de contar histórias, minha maior inspiração foi o cinema.
+    <br>
+    Desde pequeno, assisti à vários tipos de filme e tive contato com diferentes tipos de autores e diretores — como Scorcese, Clint Eastwood e meu favorito de todos os tempos, Quentin Tarantino.
+    Foram nesses caras que encontrei minha maior inspiração na escrita de modo geral.
+    <br>
+    Sou apaixonado por cinema e estudo linguagem cinematográfica, montagem,
+    narrativa e história do audiovisual. 
+    <br>
+    Minha formação autodidata é voltada para
+    compreender o poder das imagens e histórias na sociedade.
+    </p>
 </section>
-<section>
-        <h1>Sobre Mim</h1>
-        <p></p>
-        <p></p>
-</section>
-<section>
-        <h1>Galeria</h1>
-        <p></p>
-        <ol>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-        </ol>
-</section>
-<section>   
-    <h1>Habilidades</h1>
-    <p></p>
-</section>
-<section>
-    <h1>Depoimentos</h1>
-    <p></p>
-</section>
+  <section>
+    <h2>Apreciador de Cafés Especiais</h2>
+    <img src="c:\Users\Lucas\Downloads\DALL·E 2025-03-10 12.40.20 - A close-up of a cappuccino in a ceramic cup with a delicate latte art design on top. The cup is placed on a wooden table with a warm, cozy ambiance. S.webp" alt="Cafés Especiais">
+    <p>
+      Ainda nesse interim, no que se refere à hobbies e estudos apartados de minha área de atuação profissional, um interesse sempre permeou minha mente: A Cafeteria.
+      <br>
+      Estudo cafés especiais como hobbie: conheço métodos de preparo, variedades de grãos,
+      perfis de torra e harmonizações. 
+      <br>
+      Preparo café como um ritual de atenção e sensibilidade, quase como uma conexão mais intima com meu eu.
+    </p>
+  </section>
+    </section>
 <section>
     <h1>Informações de Contato</h1>
-    <p></p>
+    <p>Caso tenha se interessado em alguma das minhas habilidades profissionais, segue abaixo meios contato:</p>
     <ol>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Email: lucashdamico15@gmail.com</li>
+        <li>Telefone (Whatsapp): (19) 983300-3330</li>
+        <li>Instagram: @lucash.damico</li>
+        <li>LinkedIn:Lucas Henrique</li>
     </ol>
 </section>
+<script src="styleTheme.js"></script>
+  <script>
+    document.querySelectorAll('a[href^="#"]').forEach(link => {
+      link.addEventListener("click", function (e) {
+        e.preventDefault();
+        const destino = document.querySelector(this.getAttribute("href"));
+        if (destino) destino.scrollIntoView({ behavior: "smooth" });
+      });
+    });
+  </script>
+</body>
+</html>
     </body>
     </html>
