--- a/Portfólio.html
+++ b/Portfólio.html
@@ -1,111 +1,120 @@
 <DOCTYPE html> 
     <html lang = "pt-br">
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport"
-    content="width=device=width, initial-scale=1.0">
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Document</title>
+        <link rel="stylesheet" href="style.css">
     </head>
-    <title>Estratégia de Aprendizagem Desafiadora</title>
     <body>
+      <h1>Portfólio de Apresentação</H1>
         <section>
-        <h1>Contextualização</h1>
-    <img src="c:\Users\Lucas\Desktop\AAAA.png" alt="Lucas Henrique D'amico">
+        <h1>Saudações</h1>
+    <img src="" alt="Lucas Henrique D'amico" class="perfil" height="150" width="150">
     <p>
-        Olá!
+        Olá!<br/><br/>
      <br>   
-        Seja muito bem-vindo ao meu espaço.
+        Seja muito bem-vindo ao meu espaço.<br/><br/>
      <br>
         Aqui você terá acesso ao presente portfólio, o qual conta um pouco de minha trajetória, tanto no estudo e profissional quanto das minha paixões.
-        Sou paralegal na área de Direito Trabalhista, onde atuo com responsabilidade e atenção aos detalhes que fazem diferença nos processos e na vida das pessoas. Ao mesmo tempo, também caminho por outras estradas que me completam: escrevo histórias, estudo cinema e cultivo um carinho especial pelo universo dos cafés.
-        Acredito que nossa identidade profissional não precisa ser limitada à uma única área.
+        Sou paralegal na área de Direito Trabalhista, onde atuo com responsabilidade e atenção aos detalhes que fazem diferença nos processos e na vida das pessoas. Ao mesmo tempo, também caminho por outras estradas que me completam: escrevo histórias, estudo cinema e cultivo um carinho especial pelo universo dos cafés.<br/><br/>
+      <br>
+        Acredito que nossa identidade profissional não precisa ser limitada à uma única área.<br/><br/>
      <br>   
-        Na verdade, ela deve crescer e refletir nossa personalidade ao mundo ao nosso redor, o qual segue com sua sufocante filosofia de criar apenas cópias das cópias que o mundo do capital diz ser a cara do sucesso.
+        Na verdade, ela deve crescer e refletir nossa personalidade ao mundo ao nosso redor, o qual segue com sua sufocante filosofia de criar apenas cópias das cópias que o mundo do capital diz ser a cara do sucesso.<br/><br/>
      <br>   
-        Neste portfólio, você irá irá ter contato com meu mais sincero eu: mosaico sincero das experiências que carrego e das que ainda quero construir.
+        Neste portfólio, você irá irá ter contato com meu mais sincero eu: um mosaico sincero das experiências que carrego e das que ainda quero construir.<br/><br/>
      <br>   
-        Sinta-se à vontade para explorar. Será um prazer dividir um pouco de mim com você.
+        Sinta-se à vontade para explorar. Será um prazer dividir um pouco de mim com você.<br/><br/>
     </p>
         <section>
             <H1>ÍNDICE</H1>
         </section>
     <nav id="menu">
         <ul>
-          <li><a href="#1 - Direito">Direito Trabalhista;</a></li>
-          <li><a href="#2 - Escritor">Escritor Independente;</a></li>
-          <li><a href="#3 - Cinema">Estudos de Cinema;</a></li>
-          <li><a href="#4 - Café">Cafés Especiais;</a></li>
+          <li><a href="#Atuação em Direito Trabalhista">Atuação em Direito Trabalhista;</a></li><br/><br/>
+          <li><a href="#Escritor Independente">Escritor Independente;</a></li><br/><br/>
+          <li><a href="#Estudos Sobre Cinema">Estudos Sobre Cinema;</a></li><br/><br/>
+          <li><a href="#Sobre Cafés Especiais">Sobre Cafés Especiais;</a></li><br/><br/>
+          <li><a href="#Informações de Contato">Informações de Contato;</a></li><br/><br/>
+          <li><a href="#Habilidades Extras">Habilidades Extras;</a></li><br/><br/>
         </ul>
       </nav>
-      <section>
+      <section id="Atuação em Direito Trabalhista">
         <h2>Atuação em Direito Trabalhista</h2>
-        <img src="c:\Users\Lucas\Downloads\Juiz.png" alt="Paralegal">
+          <img src="Paralegal.webp" alt="Paralegal" class="thumbnail" height="100" width="100">
         <p>
-          Atuei como paralegal na área trabalhista, redigindo peças processuais, realizando pesquisas jurisprudenciais e dando suporte técnico em audiências e diligências, bem como auxílio nas dúvidas de vários clientes que enviavam mensagem via Whatsapp para o escritório.
+          Atuei como paralegal na área trabalhista, redigindo peças processuais, como petições inciais, manifestação ao laudo pericial (médico ou ambiental), petições genéricas, envio de cartas de rescisão indireta, contrarrazões, contraminuta, distribuíção de processos, realizava, também, as pesquisas jurisprudenciais e auxiliava no suporte técnico em audiências e diligências, bem como atendimento e esclarecimentos das dúvidas de vários clientes que enviavam mensagem via Whatsapp para o escritório.<br/><br/>
          <br> 
-          Meu trabalho visava garantir a qualidade e agilidade nas rotinas jurídicas do escritório e o melhor e mais confortável atendimento ao cliente.
+          Meu trabalho visava garantir a qualidade e agilidade nas rotinas jurídicas do escritório e o melhor e mais confortável atendimento ao cliente.<br/><br/>
         </p>
       </section>
+      <section id="Escritor Independente">
       <h2>Escritor Independente</h2>
-      <img src="c:\Users\Lucas\Desktop\Escritor.jpg" alt="Escritor Independente">
+        <img src="escritor-iniciante.jpg" alt="Escritor Independente" class="thumbnail" height="100" width="100">
     <p>
-      Desde que eu era pequeno, minha brincadeira favorita era escrever ou criar histórias. 
+      Desde que era pequeno, uma de minhas principais ocupações era escrever ou criar história, utilizando como personagens principais desde meus brinquedos até qualquer objeto que me chamasse atenção.<br/><br/>
      <br>
       De forma independente, produzi quadrinhos, contos e roteiros autorais, explorando temas como fantasia,
-      mistério, cinema e crítica social — infelizmente, ainda não obtive a tão sonhada oportunidade de me lançar nesse mundo. 
+      mistério, cinema e crítica social — infelizmente, ainda não obtive a tão sonhada oportunidade de me lançar nesse mundo, o que abre oportunidade para autopublicação, tema de meus estudos, atualmente.<br/><br/>
      <br> 
-      A escrita é minha forma de expressão criativa e de
-      conexão com o mundo ao meu redor.
+      A escrita é minha forma de expressão criativa e gerar conectividade com o mundo ao meu redor.<br/><br/>
     </p>
   </section>
-    <h2>Estudos de Cinema</h2>
-    <img src="c:\Users\Lucas\Downloads\maxresdefault.jpg" alt="A Arte Contar Histórias Com Uma Câmera">
+  <section id="Estudos Sobre Cinema">
+    <h2>Estudos sobre Cinema</h2> 
+      <img src="cinerama_dome_publicity_-_embed_-2020.webp" alt="Estudos Sobre Cinema" class="thumbnail" height="100" width="100">
     <p>
-    De forma conexa com o gosto pela escrita e a arte de contar histórias, minha maior inspiração foi o cinema.
+    Diferentemente da maioria dos escritores de modo geral, acabei por ter um caminho inverso em minhas inspirações. Se você tiver como exemplo um cara como
+    Benedito Ruy Barbosa, uma de suas inspirações para escrita se refere à leitura de um livro como "Peter Pan", de J. M. Barrie. Entretanto, no meu caso, minha 
+    maior inispiração para a escrita foi o cinema.<br/><br/>
     <br>
-    Desde pequeno, assisti à vários tipos de filme e tive contato com diferentes tipos de autores e diretores — como Scorcese, Clint Eastwood e meu favorito de todos os tempos, Quentin Tarantino.
-    Foram nesses caras que encontrei minha maior inspiração na escrita de modo geral.
+    Desde pequeno, assisti à vários tipos de filme e tive contato com diferentes tipos de autores e diretores — como Scorcese, Clint Eastwood e meu favorito de todos os tempos, Quentin Tarantino.<br/><br/>
     <br>
-    Sou apaixonado por cinema e estudo linguagem cinematográfica, montagem,
-    narrativa e história do audiovisual. 
+    Foram nesses caras que encontrei minha maior inspiração na escrita, de modo geral.<br/><br/>
     <br>
-    Minha formação autodidata é voltada para
-    compreender o poder das imagens e histórias na sociedade.
+    Dessa forma, não havia outro caminho senão me tornar um cinéfilo. Estudo a linguagem cinematográfica, montagem, narrativa e história do audiovisual.<br/><br/>
+    <br>
+    Sendo assim, tal qual a escrita, acredito que a combinação da imagem e do som detém grande poderio para mudança do mundo ao nosso redor.<br/><br/>
+    <br>
+    Dessa forma, dedico tempo e atenção para compreender tal poder e histórias que moldam nossa sociedade.<br/><br/>
     </p>
 </section>
-  <section>
-    <h2>Apreciador de Cafés Especiais</h2>
-    <img src="c:\Users\Lucas\Downloads\DALL·E 2025-03-10 12.40.20 - A close-up of a cappuccino in a ceramic cup with a delicate latte art design on top. The cup is placed on a wooden table with a warm, cozy ambiance. S.webp" alt="Cafés Especiais">
+  <section id="Sobre Cafés Especiais">
+    <h2>Sobre Cafés Especiais</h2>
+      <img src="hq720.jpg" alt="Sobre Cafés Especiais" class="thumbnail" height="100" width="100">
     <p>
-      Ainda nesse interim, no que se refere à hobbies e estudos apartados de minha área de atuação profissional, um interesse sempre permeou minha mente: A Cafeteria.
+      Ainda nesse interim, no que se refere à hobbies e estudos apartados de minha área de atuação profissional, um interesse sempre permeou minha mente: os cafés.<br/><br/>
       <br>
-      Estudo cafés especiais como hobbie: conheço métodos de preparo, variedades de grãos,
-      perfis de torra e harmonizações. 
+      Dado meu interesse, comecei aos poucos, sabendo a diferença entre cafés, como Espresso e Americano, ou a diferença entre um cappuccino, moccacino, Latte e Flat White.<br/><br/>
       <br>
-      Preparo café como um ritual de atenção e sensibilidade, quase como uma conexão mais intima com meu eu.
+      Através desses conhecimentos, logo fui inserido em estudos mais aprofundados, como métodos de preparo (prensa francesa, V60, 102, Clever, AeroPress e B75), e junto à isso, as variedades de grão (Arábica, Bourbon, Geisha e Canephora), o perfil de torra ideal para cada extração de forma mais eficiente a fim de se extrair os sabores ideais para se apreciar ao café (torra média e clara), as notas sensoriais (achocolatadas, frutadas, florais e de nozes).<br/><br/> 
+      <br>
+      Preparo café como um ritual de atenção e sensibilidade, quase como uma conexão mais intima com meu eu, permitindo-me desligar da turbulência do mundo ao meu redor.<br/><br/>
     </p>
   </section>
     </section>
-<section>
-    <h1>Informações de Contato</h1>
-    <p>Caso tenha se interessado em alguma das minhas habilidades profissionais, segue abaixo meios contato:</p>
+<section id="Habilidades Extras">
+  <h2>Habilidades Extras</h2>
+  <ul>
+    <li>Inglês - Avançado;</li>
+    <li>Alemão - Básico;</li>
+    <li>Italiano - Básico;</li>
+    <li>Francês - Iniciante;</li>
+    <li>Informática - Pacote Office;</li>
+    <li>Excel Avançado;</li>
+    <li>JavaScript;</li>
+  </ul>
+</section>
+<section id="Informações de Contato">
+    <h2>Informações de Contato</h2>
+    <p>Caso tenha se interessado em alguma das minhas habilidades profissionais, segue abaixo meios contato:</p><br/><br/>
     <ol>
-        <li>Email: lucashdamico15@gmail.com</li>
-        <li>Telefone (Whatsapp): (19) 983300-3330</li>
-        <li>Instagram: @lucash.damico</li>
-        <li>LinkedIn:Lucas Henrique</li>
+        <li>Email: lucashdamico15@gmail.com;</li><br/><br/>
+        <li>Telefone (Whatsapp): (19) 983300-3330;</li><br/><br/>
+        <li>Instagram: @lucash.damico;</li><br/><br/>
+        <li>LinkedIn:Lucas Henrique;</li><br/><br/>
     </ol>
 </section>
-<script src="styleTheme.js"></script>
-  <script>
-    document.querySelectorAll('a[href^="#"]').forEach(link => {
-      link.addEventListener("click", function (e) {
-        e.preventDefault();
-        const destino = document.querySelector(this.getAttribute("href"));
-        if (destino) destino.scrollIntoView({ behavior: "smooth" });
-      });
-    });
-  </script>
 </body>
 </html>
-    </body>
-    </html>
