--- a/Portfólio.html
+++ b/Portfólio.html
@@ -27,19 +27,17 @@
      <br>   
         Sinta-se à vontade para explorar. Será um prazer dividir um pouco de mim com você.<br/><br/>
     </p>
+    </section>
+    <nav class="icon-menu" style="margin-top: 100px; margin-bottom: 100px;"> <!--Organizar os itens-->
+      <a href="#Atuação_em_Direito_Trabalhista">Atuação em Direito Trabalhista;</a>
+      <a href="#Escritor_Independente">Escritor Independente;</a>
+      <a href="#Estudos_Sobre_Cinema">Estudos Sobre Cinema;</a>
+      <a href="#Sobre_Cafés_Especiais">Sobre Cafés Especiais;</a>
+      <a href="#Informações_de_Contato">Informações de Contato;</a>
+      <a href="#Habilidades_Extras">Habilidades Extras;</a>
+  </nav>
         <section>
-            <H1>ÍNDICE</H1>
-        </section>
-    <nav id="menu">
-        <ul>
-          <li><a href="#Atuação em Direito Trabalhista">Atuação em Direito Trabalhista;</a></li><br/><br/>
-          <li><a href="#Escritor Independente">Escritor Independente;</a></li><br/><br/>
-          <li><a href="#Estudos Sobre Cinema">Estudos Sobre Cinema;</a></li><br/><br/>
-          <li><a href="#Sobre Cafés Especiais">Sobre Cafés Especiais;</a></li><br/><br/>
-          <li><a href="#Informações de Contato">Informações de Contato;</a></li><br/><br/>
-          <li><a href="#Habilidades Extras">Habilidades Extras;</a></li><br/><br/>
-        </ul>
-      </nav>
+            <H1>ÍNDICE</H1>     
       <section id="Atuação em Direito Trabalhista">
         <h2>Atuação em Direito Trabalhista</h2>
           <img src="Paralegal.webp" alt="Paralegal" class="thumbnail" height="100" width="100">
