--- a/Portfólio.html
+++ b/Portfólio.html
@@ -10,7 +10,7 @@
       <h1>Portfólio de Apresentação</H1>
         <section>
         <h1>Saudações</h1>
-    <img src="" alt="Lucas Henrique D'amico" class="perfil" height="150" width="150">
+    <img src="AAAA.jpg" alt="Lucas Henrique D'amico" class="perfil" height="150" width="150">
     <p>
         Olá!<br/><br/>
      <br>   
@@ -25,20 +25,20 @@
      <br>   
         Neste portfólio, você irá irá ter contato com meu mais sincero eu: um mosaico sincero das experiências que carrego e das que ainda quero construir.<br/><br/>
      <br>   
-        Sinta-se à vontade para explorar. Será um prazer dividir um pouco de mim com você.<br/><br/>
+        Sinta-se à vontade para explorar. Será um prazer dividir um pouco sobre mim com você.<br/><br/>
     </p>
     </section>
-    <nav class="icon-menu" style="margin-top: 100px; margin-bottom: 100px;"> <!--Organizar os itens-->
-      <a href="#Atuação_em_Direito_Trabalhista">Atuação em Direito Trabalhista;</a>
-      <a href="#Escritor_Independente">Escritor Independente;</a>
-      <a href="#Estudos_Sobre_Cinema">Estudos Sobre Cinema;</a>
-      <a href="#Sobre_Cafés_Especiais">Sobre Cafés Especiais;</a>
-      <a href="#Informações_de_Contato">Informações de Contato;</a>
-      <a href="#Habilidades_Extras">Habilidades Extras;</a>
-  </nav>
         <section>
             <H1>ÍNDICE</H1>     
-      <section id="Atuação em Direito Trabalhista">
+            <nav class="icon-menu" style="margin-top: 100px; margin-bottom: 100px;"> <!--Organizar os itens-->
+            <a href="#Atuação_em_Direito_Trabalhista">Atuação em Direito Trabalhista;</a>
+            <a href="#Escritor_Independente">Escritor Independente;</a>
+            <a href="#Estudos_Sobre_Cinema">Estudos Sobre Cinema;</a>
+            <a href="#Sobre_Cafés_Especiais">Sobre Cafés Especiais;</a>
+            <a href="#Informações_de_Contato">Informações de Contato;</a>
+            <a href="#Habilidades_Extras">Habilidades Extras;</a>
+  </nav>
+      <section id="Atuação_em_Direito_Trabalhista">
         <h2>Atuação em Direito Trabalhista</h2>
           <img src="Paralegal.webp" alt="Paralegal" class="thumbnail" height="100" width="100">
         <p>
@@ -47,7 +47,7 @@
           Meu trabalho visava garantir a qualidade e agilidade nas rotinas jurídicas do escritório e o melhor e mais confortável atendimento ao cliente.<br/><br/>
         </p>
       </section>
-      <section id="Escritor Independente">
+      <section id="Escritor_Independente">
       <h2>Escritor Independente</h2>
         <img src="escritor-iniciante.jpg" alt="Escritor Independente" class="thumbnail" height="100" width="100">
     <p>
@@ -59,7 +59,7 @@
       A escrita é minha forma de expressão criativa e gerar conectividade com o mundo ao meu redor.<br/><br/>
     </p>
   </section>
-  <section id="Estudos Sobre Cinema">
+  <section id="Estudos_Sobre_Cinema">
     <h2>Estudos sobre Cinema</h2> 
       <img src="cinerama_dome_publicity_-_embed_-2020.webp" alt="Estudos Sobre Cinema" class="thumbnail" height="100" width="100">
     <p>
@@ -78,7 +78,7 @@
     Dessa forma, dedico tempo e atenção para compreender tal poder e histórias que moldam nossa sociedade.<br/><br/>
     </p>
 </section>
-  <section id="Sobre Cafés Especiais">
+  <section id="Sobre_Cafés_Especiais">
     <h2>Sobre Cafés Especiais</h2>
       <img src="hq720.jpg" alt="Sobre Cafés Especiais" class="thumbnail" height="100" width="100">
     <p>
@@ -92,7 +92,7 @@
     </p>
   </section>
     </section>
-<section id="Habilidades Extras">
+<section id="Habilidades_Extras">
   <h2>Habilidades Extras</h2>
   <ul>
     <li>Inglês - Avançado;</li>
@@ -104,7 +104,7 @@
     <li>JavaScript;</li>
   </ul>
 </section>
-<section id="Informações de Contato">
+<section id="Informações_de_Contato">
     <h2>Informações de Contato</h2>
     <p>Caso tenha se interessado em alguma das minhas habilidades profissionais, segue abaixo meios contato:</p><br/><br/>
     <ol>
