--- a/Portfólio.html
+++ b/Portfólio.html
@@ -37,6 +37,7 @@
             <a href="#Sobre_Cafés_Especiais">Sobre Cafés Especiais;</a>
             <a href="#Informações_de_Contato">Informações de Contato;</a>
             <a href="#Habilidades_Extras">Habilidades Extras;</a>
+            <a href="#Realizações_em_JavaScript">Realizações em JavaScript;</a>
   </nav>
       <section id="Atuação_em_Direito_Trabalhista">
         <h2>Atuação em Direito Trabalhista</h2>
@@ -103,6 +104,15 @@
     <li>Excel Avançado;</li>
     <li>JavaScript;</li>
   </ul>
+</section>
+<section id="Realizações_em_JavaScript">
+  <h2>Realizações em JavaScript</h2>
+  <p>
+    Durante o tempo em que estive no curso de JavaScript, realizei o estudo acerca desse tipo de linguagem de programação, bem como, acabei por realizar vários projetos muito interessantes.<br/><br/>
+    <br>
+    Entre os projetos mais interessantes que acabei por desenvolver em sala de aula, se encontra uma cálculadora, a qual pode ser acessada logo abaixo:<br/><br/>
+    <iframe src="https://lucasdamico1.github.io/Calculadora/" frameborder="0" width="900px" height="900px"></iframe>
+  </p>
 </section>
 <section id="Informações_de_Contato">
     <h2>Informações de Contato</h2>
